fix directions overflow

--- a/web/src/components/SearchPlaces.css
+++ b/web/src/components/SearchPlaces.css
@@ -4,6 +4,8 @@
 
 .resultsbox > div {
 	width: 100%;
+	max-height: 70vh;
+	overflow: auto;
 }
 .selected > .resultsbox {
 	margin-top: -2em;
